# file-handle-closer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: file_handles.cpp  file_handles.hpp  main.cpp
src/nt/: nt_defs.hpp  nt_functions.cpp  nt_functions.hpp
src/search_strategies/: pattern_search.cpp  pattern_search.hpp  regex_search.cpp  regex_search.hpp  search_strategy.hpp
src/utils/: debug_privileges.cpp  debug_privileges.hpp  handle_guard.hpp  string_utils.hpp
